Updated GC and memory settings for TGAS