@@ -2,4 +2,4 @@
 :: Gaia Sandbox start script.
 ::
 
-java -Xmx512m -XX:+UseParallelGC -cp "lib/*" gaia.cu9.ari.gaiaorbit.desktop.GaiaSkyDesktop
+java -Xms1g -Xmx2g -XX:+UseConcMarkSweepGC -cp "lib/*" gaia.cu9.ari.gaiaorbit.desktop.GaiaSkyDesktop
